# Borg

./: .gitignore  CMakeLists.txt  README.md
Borg/: CMakeLists.txt
Borg/include/Borg/: AbstractStringBuffer.h  ArrayBuffer.h  Base.h  BasicStringBuffer.h  Borg.h  Buffer.h  CharBuffer.h  Color.h  DateTime.h  Encoding.h  EncodingBuffer.h  Environment.h  EventArgs.h  Events.h  Exception.h  Functional.h  ICollection.h  IComparer.h  IEnumerable.h  IEnumerator.h  IIterator.h  IList.h  IString.h  IStringBuffer.h  LINQ.h  List.h  MemoryBlock.h  Path.h  Ref.h  RefCast.h  Screen.h  ServiceCollcetion.h  StdEnumerators.h  String.h  StringBuffer.h  StringMemory.h  Types.h  Uri.h  VectorEnumerator.h  WideCharBuffer.h
Borg/include/Borg/DependencyInjection/: Asserts.h  DetailServices.h  IService.h  Service.h  ServiceCollcetion.h  ServiceCollection.h  ServiceProvider.h  Services.h  TService.h
Borg/include/Borg/Drawing/: Color.h  Point.h  Rectangle.h  Size.h
Borg/include/Borg/IO/: File.h
Borg/include/Borg/LINQ/: OrderEnumerator.h  SelectEnumerator.h  WhereEnumerator.h
Borg/include/Borg/System/IO/: File.h
Borg/include/Borg/UI/: Control.h  CustomControl.h  DialogResult.h  DpiHelper.h  EventArgs.h  Form.h  Handle.h  IControl.h  IForm.h  Message.h
Borg/src/: CharBuffer.cpp  Color.cpp  DateTime.cpp  DpiHelper.cpp  Encoding.cpp  Exception.cpp  IString.h  Screen.cpp  String.cpp  StringBuffer.cpp  StringImpl.h  Uri.cpp  WideCharBuffer.cpp  WideStringBuffer.cpp
Borg/src/DependencyInjection/: Services.cpp
Borg/src/Drawing/: Color.cpp  Point.cpp  Rectangle.cpp  Size.cpp
Borg/src/Platform/: CMakeLists.txt
Borg/src/Platform/Windows/: CMakeLists.txt  Encoding.cpp  Environment.cpp  Path.cpp  StringConversion.h  StringImpl.cpp  StringImpl.h  Uri.cpp  Utf16String.cpp  Utf16String.h  Win32Screen.cpp  Win32Screen.h  Windows.h
Borg/src/Platform/Windows/IO/: File.cpp
Borg/src/Platform/Windows/UI/: ClassFactory.cpp  ClassFactory.h  (+16 more)
Borg/src/UI/: Form.cpp  Handle.cpp  Message.cpp
BorgTests/: CMakeLists.txt  test_ArrayBuffer.cpp  test_Buffer.cpp  test_Color.cpp  test_DateTime.cpp  test_EnumFlag.cpp  test_Environment.cpp  test_EventHandler.cpp  test_LINQ.cpp  test_List.cpp  test_MemoryBlock.cpp  test_Path.cpp  test_Ref.cpp  test_Screen.cpp  test_StringBuffer.cpp  test_Uri.cpp  test_string.cpp
BorgTests/DependencyInjection/: test_Services.cpp
BorgTests/Drawing/: test_Color.cpp  test_Point.cpp  test_Rectangle.cpp  test_Size.cpp
BorgTests/UI/: test_Form.cpp
Tests/: CMakeLists.txt  test_Area51.cpp  test_DateTime.cpp  test_Environment.cpp  test_LINQ.cpp  test_Ref.cpp  test_string.cpp
Tests/DependencyInjection/: test_ServiceCollection.cpp
(+1 files in other folders)
